--- a/app/views/clients/addonetimesale.html
+++ b/app/views/clients/addonetimesale.html
@@ -168,7 +168,8 @@
 		<div class="offset3">
 			<a id="cancel" href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
 
-				<button id="submit" type="submit" class="btn btn-primary" ng-disabled="flag">{{'button.save' | translate}}</button>
+				<!-- <button id="submit" type="submit" class="btn btn-primary" ng-disabled="flag">{{'button.save' | translate}}</button> -->
+				<button id="submit" type="submit" class="btn btn-primary">{{'button.save' | translate}}</button>
 		</div>
 	</fieldset>
 </form>
