--- a/app/views/clients/adjustments.html
+++ b/app/views/clients/adjustments.html
@@ -131,8 +131,8 @@
 			<div class="offset3">
 				<a id="cancel" href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
 
-			<button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button>
-
+			<!-- <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button> -->
+                <button id="submit" type="submit" class="btn btn-primary">Save</button>
 			</div>
 
 		</fieldset>
