--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -227,8 +227,8 @@
           <div class="pull-right">
             
                <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
-           <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button>
-
+          <!--  <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button> -->
+               <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
          
