--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -1151,7 +1151,7 @@
                     </div>
                     <div class="modal-footer">
                         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
-                        <button id="submit" class="btn btn-primary" ng-click="accept(start.date)" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+                        <button id="submit" class="btn btn-primary" ng-click="accept(start.date)">{{'label.confirm' | translate}}</button>
                     </div>
       </script>
       <script type="text/ng-template" id="StatementPop.html">
