--- a/app/views/crm/prospects/createprospects.html
+++ b/app/views/crm/prospects/createprospects.html
@@ -20,8 +20,9 @@
 									<td>
 										<div class="control-group">
 		            					<label class="control-label" for="prospectType">{{ 'label.create.type' | translate }}<span class="required">*</span></label>
-		            					<div class="controls">
+		            					<div class="controls" style="margin-top:5px;">
 		              					<input type="radio" ng-model="formData.prospectType" value="1" ng-change="resetCredits()">Individual
+		              					&nbsp;&nbsp;&nbsp;	&nbsp;&nbsp;&nbsp;
 		              					<input type="radio" ng-model="formData.prospectType" value="2" ng-change="resetCredits()">Corporate
 		            					</div>
 		          						</div>
@@ -78,7 +79,7 @@
 							<tr>
 							<td>
 								<div class="control-group">
-            					<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}<span class="required">*</span></label>
+            					<label class="control-label" for="homePhoneNumber">{{ 'label.homephone' | translate }}</label>
             					<div class="controls">
               					<input type="text" id="homePhoneNumber" name="homephone" ng-model="formData.homePhoneNumber" ng-pattern="/^(?!0+$)(?!1+$)(?!2+$)(?!3+$)(?!4+$)(?!5+$)(?!6+$)(?!7+$)(?!8+$)(?!9+$)\d{1,15}$/">
               					<div ng-show="createprospectsform.homephone.$dirty && createprospectsform.homephone.$invalid">
@@ -91,7 +92,7 @@
 							<tr>
 							<td>
 								<div class="control-group">
-            					<label class="control-label" for="workPhoneNumber">{{ 'label.officephone' | translate }}<span class="required">*</span></label>
+            					<label class="control-label" for="workPhoneNumber">{{ 'label.officephone' | translate }}</label>
             					<div class="controls">
               					<input type="text" id="workPhoneNumber" name="workphone" ng-model="formData.workPhoneNumber" ng-pattern="/^(?!0+$)(?!1+$)(?!2+$)(?!3+$)(?!4+$)(?!5+$)(?!6+$)(?!7+$)(?!8+$)(?!9+$)\d{1,15}$/">
               					<div ng-show="createprospectsform.workphone.$dirty && createprospectsform.workphone.$invalid">
@@ -118,7 +119,7 @@
 							
 								<td>
 									<div class="control-group">
-            						<label class="control-label" for="email">{{ 'label.emailid' | translate }}<span class="required">*</span></label>
+            						<label class="control-label" for="email">{{ 'label.emailid' | translate }}</label>
             						<div class="controls">
               						<input type="email" id="email" ng-model="formData.email" name="email">
               						<div ng-show="createprospectsform.email.$dirty && createprospectsform.email.$invalid">
@@ -155,7 +156,7 @@
 										<tr>
 											<td>
 												<div class="control-group">
-            									<label class="control-label" for="streetArea">{{ 'label.street/area' | translate }}<span class="required">*</span></label>
+            									<label class="control-label" for="streetArea">{{ 'label.street/area' | translate }}</label>
             									<div class="controls">
               									<input type="text" id="streetArea" ng-model="formData.streetArea">
            										</div>
@@ -200,12 +201,13 @@
 										<tr>
 											<td>
 												<div class="control-group">
-            									<label class="control-label" for="zipCode">{{ 'label.zipcode' | translate }}<span class="required">*</span></label>
+            									<label class="control-label" for="zipCode">{{ 'label.zipcode' | translate }}</label>
             									<div class="controls">
-              									<input type="number" id="zipCode" ng-model="formData.zipCode" name="zipcode" ng-pattern="/^[0-9]+$/">
+              									<!-- <input type="number" id="zipCode" ng-model="formData.zipCode" name="zipcode" ng-pattern="/^[0-9]+$/">
               									<div ng-show="createprospectsform.zipcode.$dirty && createprospectsform.zipcode.$invalid" >
               										<small class="error" ng-show="createprospectsform.zipcode.$error.pattern">digits only!!</small>
-            									</div>
+            									</div> -->
+            									<input type="text" id="zipcode" ng-model="formData.zipCode">
           										</div>
 											</td>
 										</tr>
